fix: 起動コマンドの修正、明示的なeslintの指定

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,6 @@
       ]
     }
   },
-  "postAttachCommand": "sudo chown -R node:node /app ./.pnpm-store && pnpm install",
+  "postAttachCommand": "sudo chown -R node:node /workspace /workspace/.pnpm-store && pnpm install",
   "forwardPorts": [3000, 3157, 51212]
 }
