--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,9 +4,10 @@ packages:
 
 catalog:
   prettier: ^3.5.3
+  eslint: ^9.39.2
   typescript: ^5.7.2
 
 onlyBuiltDependencies:
-  - '@prisma/engines'
+  - "@prisma/engines"
   - better-sqlite3
   - prisma
