--- a/app/backend/tsconfig.json
+++ b/app/backend/tsconfig.json
@@ -5,10 +5,11 @@
     "strict": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
-    "types": ["node"],
+    "types": ["node", "vitest/globals"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
     "outDir": "./dist"
   },
+  "include": ["src/**/*", "vitest.config.ts"],
   "exclude": ["node_modules"]
 }
