--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,18 +3,19 @@ packages:
   - app/backend
 
 catalog:
+  '@vitest/coverage-v8': ^4.0.16
   eslint: ^9.39.2
   prettier: ^3.5.3
   typescript: ^5.7.2
   vite-tsconfig-paths: ^6.0.3
   vitest: ^3.2.4
-  "@vitest/coverage-v8": ^4.0.16
 
 ignoredBuiltDependencies:
+  - argon2
   - esbuild
   - unrs-resolver
 
 onlyBuiltDependencies:
-  - "@prisma/engines"
+  - '@prisma/engines'
   - better-sqlite3
   - prisma
