--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "build": "pnpm -r --filter ./app/backend --filter ./app/frontend run build",
     "preview": "pnpm --filter ./app/backend run start & pnpm --filter ./app/frontend run preview",
     "lint": "pnpm -r run lint",
-    "format": "pnpm -r run format"
+    "format": "pnpm -r run format",
+    "check": "pnpm -r run check",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,json,css}": "pnpm check"
   }
 }
