--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,7 +9,21 @@ services:
     networks:
       - dev_network
 
+  redis:
+    image: redis:7-alpine
+    container_name: redis-server
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: always
+    networks:
+      - dev_network
+
 networks:
   dev_network:
     name: dev_network
     driver: bridge
+
+volumes:
+  redis_data:
