--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,6 +9,7 @@ catalog:
   typescript: ^5.7.2
   vite-tsconfig-paths: ^6.0.3
   vitest: ^4.0.16
+  zod: ^4.2.1
 
 ignoredBuiltDependencies:
   - argon2
